<resources>
    <string name="app_name">NatAktu</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Available Devices</string>
    <string name="bluetooth_not_supported">Bluetooth is not supported on this device</string>
    <string name="bluetooth_cannot_use_without">Cannot use this application without Bluetooth</string>
    <string name="startButton">START</string>
    <string name="stopButton">STOP</string>
    <string name="pitchText">PITCH</string>
    <string name="amplitudeText">AMPLITUDE</string>
    <string name="durationText">DURATION</string>
    <string name="thresholdText">THRESHOLD</string>
    <string name="bluetooth_connect">CONNECT</string>
    <string name="scanDevices">Scan for More Devices</string>
    <string name="credits">CREDITS</string>
    <string name="teamName"><i>Developers:</i>\n\nDeven Bawale\n\nSrivatsa Yogendra\n\nTejaswini Vibhute</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
